##########################################################################################

CHANGELOG.txt to track changes to the Omega theme.

##########################################################################################
##### Current Release: 7.x-2.1
##### Pending changes for Next Release
########################################################################################## 

##########################################################################################
##### Changes in: 7.x-2.1
########################################################################################## 

3/01/2011
=========
#1077448  - give priority to zone--ZONEID.tpl.php rather than zone.tpl.php (regression)
#1077662  - Add default stylesheets/javascript to the starterkits
#965036   - Conditional IE Stylesheet

2/28/2011
=========
#1076292  - Fix Omega CSS loading order/method

##########################################################################################
##### Changes in: 7.x-2.0
########################################################################################## 

2/24/2011
=========
#1071666  - Missing page titles
#0000000  - Update form.css and introduce formalize.me library for form defaultification
#0000000  - FIXING that one issue with name/pass HTML5 placeholder text
#0000000  - CHANGING search field default value to use HTML5 placeholder text

2/23/2011
=========
#1070640  - Make Branding & Menu regions "real" regions
#1070628  - Restructure Menu Options/Rendering
#1066444  - Would it be possible to add an "active-trail" class for drop-down menus?


##########################################################################################
##### Changes in: 7.x-2.0-beta3
########################################################################################## 

2/20/2011
=========
#1067694  - HTML5 additions to Reset CSS
#1065270  - Strict warning: Creating default object from empty value

2/17/2011
=========