@@ -32,6 +32,10 @@ CHANGELOG.txt to track changes to the Omega theme.
 ##### Pending changes for Next Release
 ########################################################################################## 
 
+3/03/2011
+=========
+#1080404  - display:none for switchtheme submit
+
 ##########################################################################################
 ##### Changes in: 7.x-2.1
 ########################################################################################## 
